--- a/style.css
+++ b/style.css
@@ -77,6 +77,22 @@ nav{
     color: crimson;
 }
 
+@media screen and (max-width: 768px) {
+    nav {
+        padding: 2rem;
+    }
+
+    .search {
+        display: none;
+    }
+
+    .menuItem {
+        margin: 2rem;
+        font-weight: 600;
+        font-size: 1.4rem;
+    }
+}
+
 .slider {
     background: url(./img/Background.jpg);
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
@@ -176,6 +192,39 @@ nav{
     color: #6495ed;
 }
 
+@media screen and (max-width: 768px) {
+    .slider {
+        clip-path: none;
+    }
+    .sliderImg {
+        width: 100%;
+        height: 100%;
+    }
+
+    .sliderBg {
+        width: 100%;
+        height: 100%;
+    }
+
+    .sliderTitle {
+        display: none;
+    }
+
+    .sliderPrice {
+        font-size: 3.5rem;
+        border: none;
+        top: 0;
+        bottom: unset;
+        left: 1%;
+    }
+
+    .buyBtn {
+        bottom: 0;
+        right: 0;
+        top: unset;
+    }
+}
+
 .features {
     display: flex;
     align-items: center;
@@ -206,6 +255,12 @@ nav{
     width: 50%;
     height: 10rem;
     font-size: 1.5rem;
+}
+
+@media screen and (max-width:768px) {
+    .features {
+        flex-direction: column;
+    }
 }
 
 .product {
@@ -382,4 +437,39 @@ label {
 .productBtn:hover {
     background-color: whitesmoke;
     color: black;
+}
+
+
+@media screen and (max-width: 768px) {
+    .product {
+        clip-path: none;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 200vh;
+    }
+
+    .productImg {
+        width: 500px;
+        height: 500px;
+    }
+
+    .productDetails {
+        width: 100%;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        position: relative;
+        top: 0;
+    }
+
+    .productTitle {
+        font-size: 7rem;
+    }
+
+    .payment {
+        width: 95%;
+    }
 }
